--- a/public/welcome/index.html
+++ b/public/welcome/index.html
@@ -178,7 +178,7 @@
 
     <div>
         <section id="prev">
-            &nbsp;<a class="previous" href="http://ljxxcaijing.github.io/post/two/"><i class="icon-arrow-left"></i> two</a><br>
+            &nbsp;<a class="previous" href="http://ljxxcaijing.github.io/post/first/"><i class="icon-arrow-left"></i> 10个步骤使用Hugo搭建github博客</a><br>
         </section><section id="next">
             &nbsp;<a class="next" href="http://ljxxcaijing.github.io/welcome/">你好，Hugo <i class="icon-arrow-right"></i></a>
         </section>
