--- a/welcome/index.html
+++ b/welcome/index.html
@@ -181,7 +181,7 @@
         <section id="prev">
             &nbsp;<a class="previous" href="http://ljxxcaijing.github.io/content/welcome/"><i class="icon-arrow-left"></i> 你好，Hugo</a><br>
         </section><section id="next">
-            &nbsp;<a class="next" href="http://ljxxcaijing.github.io/post/xxx/"> <i class="icon-arrow-right"></i></a>
+            &nbsp;<a class="next" href="http://ljxxcaijing.github.io/themes/hyde/LICENSE/"> <i class="icon-arrow-right"></i></a>
         </section>
     </div>
 
